tests/error/misc_errors/not_higher_order.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> None:
    f = len
