tests/error/misc_errors/not_higher_order.err
Error: Not higher-order (at $FILE:6:8)
  | 
4 | @compile_guppy
5 | def foo() -> None:
6 |     f = len
  |         ^^^ Function `len` may not be used as a higher-order value

Guppy compilation failed due to 1 previous error
